# ComfyUI-Stable3DGen

./: .gitattributes  LICENSE  README.md  __init__.py  app.py  pyproject.toml  requirements.txt  setup.cfg  stable_3d.py
.github/workflows/: publish_action.yml  python-lint.yml
Stable3DGen/: README.md  app.py  requirements.txt
Stable3DGen/hi3dgen/pipelines/: hi3dgen.py
example_workflows/: Stable3DGen.json
hi3dgen/pipelines/: hi3dgen.py
